tests/baselines/reference/invalidVoidValues.errors.txt
==== tests/cases/compiler/invalidVoidValues.ts (11 errors) ====
    var x: void;
    x = 1;
    ~
!!! error TS2011: Cannot convert 'number' to 'void'.
    x = '';
    ~
!!! error TS2011: Cannot convert 'string' to 'void'.
    x = true;
    ~
!!! error TS2011: Cannot convert 'boolean' to 'void'.
    
    enum E { A }
    x = E;
    ~
!!! error TS2011: Cannot convert 'typeof E' to 'void'.
    x = E.A;
    ~
!!! error TS2011: Cannot convert 'E' to 'void'.
    
    class C { foo: string }
    var a: C;
    x = a;
    ~
!!! error TS2011: Cannot convert 'C' to 'void'.
    
    interface I { foo: string }
    var b: I;
    x = b;
    ~
!!! error TS2011: Cannot convert 'I' to 'void'.
    
    x = { f() {} }
    ~
!!! error TS2011: Cannot convert '{ f(): void; }' to 'void'.
    
    module M { export var x = 1; }
    x = M;
    ~
!!! error TS2011: Cannot convert 'typeof M' to 'void'.
    
    function f<T>(a: T) {
        x = a;
        ~
!!! error TS2011: Cannot convert 'T' to 'void'.
    }
    x = f;
    ~
!!! error TS2011: Cannot convert 'typeof f' to 'void'.